# datacollector

./: .env.example  .gitignore  CHANGELOG_v10.md  CLAUDE.md  Master_01_Architecture_and_Flow.md  Master_02_Processing_Logic.md  Master_03_Output_and_Resilience.md  conftest.py  pyproject.toml  run.bat  run.sh
collector/: __init__.py  __main__.py  aggregate.py  alerts.py  archive.py  channel_quality.py  chunking.py  circuit_breaker.py  clickbait.py  dlq_replayer.py  env_io.py  events.py  hashing.py  killswitch.py  locks.py  metrics.py  payload.py  pii.py  pipeline.py  priority.py  prompt_loader.py  query.py  rollback.py  runs.py  secrets_rotation.py  services.py  stages.py  store.py  traces.py  vault.py
docs/: Appendix_A_Platform_Mapping.md  Appendix_B_State_and_Event_Log.md  Appendix_C_Observability.md  Appendix_D_Security_and_Compliance.md  FINAL_REPORT.md  GOTCHAS.md  USER_MANUAL.md  VERIFICATION_METHOD.md  apitest.json  coverage.md  dashboard.html  index.html  manifest.json  status.json  sw.js
packaging/: collector.spec
prompts/: extract_generic_v1.md  extract_generic_v2.md  extract_saju_v1.md
scripts/: install_desktop_shortcut.ps1  pre-commit
tests/: README.md  conftest.py  test_adapters.py  test_apitest.py  test_app.py  test_app_api.py  test_cli.py  test_e2e_100.py  test_e2e_canonical.py  test_env_io.py  test_extract_v2.py  test_final_sweep.py  test_llm_groq.py  test_migrations.py  test_p0_p1_p2.py  test_p1_second.py  test_p2_p3.py  test_p3.py  test_p4.py  test_run_dedup.py  test_runs_and_channel.py  test_status_pipeline.py  test_vault.py  test_workflows.py  (+2 more)
(+36 files in other folders)
